src/objects/LMS_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Aadhaar_No__c</fullName>
        <label>Aadhaar No</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Awards__c</fullName>
        <label>Awards</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTC__c</fullName>
        <label>CTC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Releasing__c</fullName>
        <label>Date of Releasing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;HR</fullName>
                </value>
                <value>
                    <fullName>App Development</fullName>
                </value>
                <value>
                    <fullName>Administration&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Tech Lead</fullName>
                </value>
                <value>
                    <fullName>HR-Associate</fullName>
                </value>
                <value>
                    <fullName>HR-Manager&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <displayFormat>CNIST{0000}</displayFormat>
        <label>Employee Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTE</fullName>
                </value>
                <value>
                    <fullName>FTH</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Contract to Hire (C2H)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MANAGER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MANAGER</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Absents__c</fullName>
        <label>No of Absents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAN_No__c</fullName>
        <label>PAN No</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Account_Number__c</fullName>
        <label>PF Account Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Experience__c</fullName>
        <label>Previous Experience</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USER STORY</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                    <color>#A53711</color>
                    <label>LMS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Birthday_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is related to the Birthday Emailer</description>
        <inlineHelpText>Check this field to enable an automated birthday email to be sent to this contact, using the &quot;Birthday Email&quot; email template</inlineHelpText>
        <label>Send Birthday Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <label>Skill Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>DevOps</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>JavaScript</fullName>
                    <color>#6633FF</color>
                    <label>JavaScript</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAN_Number__c</fullName>
        <label>UAN Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Banglore</fullName>
                </value>
                <value>
                    <fullName>Delhi&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;On-Site</fullName>
                </value>
                <value>
                    <fullName>Client&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ADHAR_Validation</fullName>
        <active>true</active>
        <description>Please enter Valid Aadhar Card number	Field</description>
        <errorConditionFormula>OR(

AND( LEN( Aadhaar_No__c  ) = 12, NOT(REGEX(  Aadhaar_No__c  ,&quot;^[0-9]+$&quot;)) ),

AND( LEN(  Aadhaar_No__c ) &lt;&gt; 12, REGEX( Aadhaar_No__c  ,&quot;^[0-9]+$&quot;) )

)</errorConditionFormula>
        <errorMessage>Please enter Valid Aadhar Card number	Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAN_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX(  PAN_No__c  , &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;) )</errorConditionFormula>
        <errorDisplayField>PAN_No__c</errorDisplayField>
        <errorMessage>Please enter Valid PAN Card number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PFValidation</fullName>
        <active>true</active>
        <description>Please enter Valid PF number</description>
        <errorConditionFormula>OR(

AND( LEN(  PF_Account_Number__c ) = 22, NOT(REGEX(  PF_Account_Number__c  ,&quot;^[0-9]+$&quot;)) ),

AND( LEN(  PF_Account_Number__c  ) &lt;&gt; 22, REGEX(  PF_Account_Number__c ,&quot;^[0-9]+$&quot;) )

)</errorConditionFormula>
        <errorMessage>Please enter Valid PF number</errorMessage>
    </validationRules>
</CustomObject>